# py-regexcite

./: README.md  pyproject.toml
src/py_regexcite/: __init__.py  string_ops.py
tests/: test_string_ops.py
