[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-regexcite"
version = "0.1.0"
description = 'A Python wrapper for string splitting'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "aidanaimy", email = "aidanaimy@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/aidanaimy/py-regexcite#readme"
Issues = "https://github.com/aidanaimy/py-regexcite/issues"
Source = "https://github.com/aidanaimy/py-regexcite"

[tool.hatch.version]
path = "src/py_regexcite/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/py_regexcite tests}"

[tool.coverage.run]
source_pkgs = ["py_regexcite", "tests"]
branch = true
parallel = true
omit = [
  "src/py_regexcite/__about__.py",
]

[tool.coverage.paths]
py_regexcite = ["src/py_regexcite", "*/py-regexcite/src/py_regexcite"]
tests = ["tests", "*/py-regexcite/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
